--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,9 @@ sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
 email-validator = "*"
+flask-socketio = "*"
+eventlet = "==0.30.2"
+gevent = "*"
 
 [dev-packages]
 
