--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.70.0",
     "socket.io-client": "^4.6.2"
   },
   "scripts": {
