--- a/react-app/package.json
+++ b/react-app/package.json
@@ -22,8 +22,8 @@
     "socket.io-client": "^4.6.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "CI=false && react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "CI=false && react-scripts",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
